--- a/src/main/resources/templates/list_patient.html
+++ b/src/main/resources/templates/list_patient.html
@@ -25,7 +25,7 @@
         <td th:text="${ patient.adresse }"></td>
         <td th:text="${ patient.ville?.nom } +'  - ' + ${ patient.ville?.pays }"></td>
         <td>
-            <a class="btn btn-secondary btn-sm" href="edit?id="><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <a class="btn btn-secondary btn-sm" th:href="@{'/patient/edit/' + ${patient.id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
             <button class="btn btn-danger btn-sm" onclick="supprimer()"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
     </tr>
