--- a/src/main/resources/templates/patient/list_patient.html
+++ b/src/main/resources/templates/patient/list_patient.html
@@ -9,6 +9,7 @@
 <table class="table table-striped">
     <thead>
     <tr>
+        <th>Id</th>
         <th>Nom & prénom</th>
         <th>Email</th>
         <th>Téléphone</th>
@@ -19,6 +20,7 @@
     </thead>
     <tbody>
     <tr th:each="patient : ${ patients }">
+        <td th:text="${ patient.id }"></td>
         <td th:text="${ patient.prenom } + ' ' + ${ patient.nom }"></td>
         <td th:text="${ patient.email }"></td>
         <td th:text="${ patient.telephone }"></td>
@@ -26,7 +28,7 @@
         <td th:text="${ patient.ville?.nom } +'  - ' + ${ patient.ville?.pays }"></td>
         <td>
             <a class="btn btn-secondary btn-sm" th:href="@{'/patient/edit/' + ${patient.id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-            <button class="btn btn-danger btn-sm" onclick="supprimer()"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+            <button class="btn btn-danger btn-sm" th:onclick="|supprimer( ${patient.id})|"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
     </tr>
     </tbody>
@@ -35,5 +37,12 @@
 
 <footer th:include="~{ fragments/footer::#footer }"></footer>
 
+<script>
+    function supprimer(id){
+        if (confirm("Etes vous sur?")){
+            window.location="/patient/delete/"+id;
+        }
+    }
+</script>
 </body>
 </html>
