Thymeleaf edition des villes

--- a/src/main/resources/templates/ville/add_edit.html
+++ b/src/main/resources/templates/ville/add_edit.html
@@ -11,7 +11,7 @@
     <form name="monForm" action="" method="post">
         <div class="form-line mb-4">
             <label class="form-label">Ville *</label>
-            <input class="form-control" type="text" name="ville" placeholder="Ville" required th:value="${ville.nom}">
+            <input class="form-control" type="text" name="nom" placeholder="Ville" required th:value="${ville.nom}">
         </div>
         <div class="form-line mb-4">
             <label>Code postale *</label>
