Gestion des erreurs + recherche des Patients

--- a/src/main/resources/templates/patient/list_patient.html
+++ b/src/main/resources/templates/patient/list_patient.html
@@ -4,8 +4,31 @@
 <body>
 <header class="mb-5" th:include="~{ fragments/header::#header }"></header>
 <main class="container"></main>
+
+<div class="alert alert-danger" role="alert" th:if="${error != null && error.length() > 0}" th:text="${error}">
+</div>
+
+<div class="alert alert-success" role="alert" th:if="${success != null && success.length() > 0}" >
+    Opération effectuée avec succès
+</div>
+
 <h1> Liste des patients</h1>
 <a href="/patient/add" class="btn btn-primary">Ajouter un patient</a>
+
+<form method="get" action="/patient">
+    <div class="row">
+        <div class="col-4">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="search" placeholder="Rechercher" th:value="${search}" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fa fa-search" aria-hidden="true"></i></button>
+            </div>
+        </div>
+        <div class="col-4">
+            <button type="submit" class="btn btn-sm btn-primary">Rechercher</button>
+        </div>
+    </div>
+</form>
+
 <table class="table table-striped">
     <thead>
     <tr>
@@ -28,7 +51,7 @@
         <td th:text="${ patient.ville?.nom } +'  - ' + ${ patient.ville?.pays }"></td>
         <td>
             <a class="btn btn-secondary btn-sm" th:href="@{'/patient/edit/' + ${patient.id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-            <button class="btn btn-danger btn-sm" th:onclick="|supprimer( ${patient.id})|"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+            <button class="btn btn-danger btn-sm" th:onclick="|supprimer( 'patient' ,${patient.id})|"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
     </tr>
     </tbody>
@@ -36,13 +59,5 @@
 </main>
 
 <footer th:include="~{ fragments/footer::#footer }"></footer>
-
-<script>
-    function supprimer(id){
-        if (confirm("Etes vous sur?")){
-            window.location="/patient/delete/"+id;
-        }
-    }
-</script>
 </body>
 </html>
