--- a/src/main/resources/templates/patient/add_edit.html
+++ b/src/main/resources/templates/patient/add_edit.html
@@ -5,6 +5,8 @@
 <header class="mb-5" th:include="~{ fragments/header::#header }"></header>
 
 <main class="container">
+  <div class="alert alert-danger" role="alert" th:if="${error != null && error.length() > 0}" th:text="${error}">
+  </div>
   <h1 th:if="${patient.id==0}">Ajouter un patient</h1>
   <h1 th:if="${patient.id>0}">Editer un patient</h1>
   <hr>
