--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,12 +13,31 @@
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="/patient">Patient</a></li>
           <li class="nav-item"><a class="nav-link" href="/rdv">RDV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/ville">Ville</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="/ville">Ville</a></li>
+          <li class="nav-item"><a class="nav-link" href="/user">Utilisateurs</a></li>
         </ul>
       </div>
     </div>
+
+    <div id="user-welcome">
+      Bienvenue ***
+    </div>
+
+    <div class="dropdown">
+      <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="/images/profil.jpg" class="img-circle">
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="#">Profil</a></li>
+        <li><a class="dropdown-item" href="/logout">Logout</a></li>
+      </ul>
+    </div>
+
   </nav>
 
-  Bienvenue
+  <div class="alert alert-danger" role="alert" th:if="${param.error}" th:text="${param.error}" id="errMessage">
+  </div>
+  <div class="alert alert-success" role="alert" th:if="${param.success}" id="succMessage" >
+    Opération effectuée avec succès
+  </div>
 </header>
