--- a/src/main/resources/templates/user/add_edit.html
+++ b/src/main/resources/templates/user/add_edit.html
@@ -10,16 +10,28 @@
     <hr>
 
     <form name="monForm" action="" method="post">
-        <div class="form-line mb-4">
-            <label class="form-label">Nom complet *</label>
-            <input class="form-control" type="text" name="name" placeholder="Votre nom" required th:value="${user.name}">
-        </div>
+        <div id="userForm">
 
-        <div class="form-line mb-4">
-            <label class="form-label">Email *</label>
-            <input class="form-control" type="text" name="email" placeholder="Votre email" required th:value="${user.email}">
-        </div>
+            <div class="form-line mb-4">
+                <label class="form-label">Nom complet *</label>
+                <input class="form-control" type="text" name="name" placeholder="Votre nom" required th:value="${user.name}">
+            </div>
 
+            <div class="form-line mb-4">
+                <label class="form-label">Email *</label>
+                <input class="form-control" type="text" name="email" placeholder="Votre email" required th:value="${user.email}">
+            </div>
+
+            <div class="form-line mb-4">
+                <label class="form-label">Nom d'utilisateur *</label>
+                <input class="form-control" type="text" name="username" placeholder="Votre nom d'utilisateur" required th:value="${user.username}">
+            </div>
+
+            <div class="form-line mb-4">
+                <label class="form-label">Mot de passe *</label>
+                <input class="form-control" type="password" name="password" placeholder="Votre mot de passe"  >
+            </div>
+        </div>
         <div class="form-line mb-4">
             <label class="form-label">Rôle *</label>
             <div class="form-check form-check-inline">
@@ -30,16 +42,7 @@
                 <input class="form-check-input" type="radio" name="usertype" id="inlineRadio2" value="ROLE_USER" th:checked="${user.roles =='ROLE_USER'}">
                 <label class="form-check-label" for="inlineRadio2">Simple utilisateur</label>
             </div>
-        </div>
-
-        <div class="form-line mb-4">
-            <label class="form-label">Nom d'utilisateur *</label>
-            <input class="form-control" type="text" name="username" placeholder="Votre nom d'utilisateur" required th:value="${user.username}">
-        </div>
-
-        <div class="form-line mb-4">
-            <label class="form-label">Mot de passe *</label>
-            <input class="form-control" type="password" name="password" placeholder="Votre mot de passe" required >
+            </div>
         </div>
 
         <div class="form-line mb-4">
